--- a/nakama-backend/package.json
+++ b/nakama-backend/package.json
@@ -1,20 +1,27 @@
 {
-  "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
+  "name": "nakama-backend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "build": "tsc",
+    "start": "node dist/app.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "-": "^0.0.1",
+    "D": "^1.0.0",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongodb": "^6.13.0",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "mongodb": "^6.12.0"
-  },
-  "scripts": {
-  "start": "ts-node src/index.ts", 
-  "start:dev": "nodemon src/index.ts"
-} 
-
+  "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.13.0"
+  }
 }
