--- a/nakama-frontend/package.json
+++ b/nakama-frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.20",
     "express": "^4.21.2",
