--- a/nakama-backend/package.json
+++ b/nakama-backend/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "-": "^0.0.1",
+    "cors": "^2.8.5",
     "D": "^1.0.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -21,6 +22,7 @@
     "typescript": "^5.7.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.0"
   }
