--- a/nakama-frontend/package.json
+++ b/nakama-frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.20",
     "express": "^4.21.2",
