--- a/nakama-frontend/package.json
+++ b/nakama-frontend/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.9",
     "express": "^4.21.2",
     "framer-motion": "^12.0.11",
     "postcss": "^8.4.49",
