Solved for dynamic review addition. Styling to follow

--- a/nakama-backend/.env
+++ b/nakama-backend/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://omardavidson227:QJIMY6YtXFeHZebB@project0.vhgxl.mongodb.net/JikanDB
+MONGODB_URI=mongodb+srv://kenancross:90Pm3GQYWs9csysj@cluster0.imxr3.mongodb.net/Jikan_DB
 PORT=3000
